--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,16 @@
         tools:itemCount="1"
         tools:listitem="@layout/layout_content_list_item"/>
 
+    <ImageView
+        android:id="@+id/iv_btn_chat"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="24dp"
+        android:padding="8dp"
+        android:background="@drawable/bg_ai_chat_btn"
+        android:src="@drawable/ic_ai_star"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
