--- a/app/src/main/res/layout/layout_content_list_item.xml
+++ b/app/src/main/res/layout/layout_content_list_item.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="144dp"
+    android:layout_height="wrap_content"
+    android:minHeight="144dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_content_list_item"
-    android:padding="16dp">
+    android:paddingHorizontal="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="8dp">
     
     <ImageView
         android:id="@+id/iv_thumbnail"
         android:layout_width="96dp"
         android:layout_height="96dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:scaleType="fitXY"
         tools:src="@drawable/pic_placeholder"/>
@@ -45,5 +47,62 @@
         android:textColor="@color/color_on_surface_variant"
         android:textSize="14sp"
         tools:text="This is a description text ffjkljsf hkjsf hkjh kjh hkjh hkjh hkjh hkjh hjkh hjkh hkjh hjkh hkjhk kjh " />
+
+    <ImageView
+        android:id="@+id/iv_more"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_thumbnail"
+        app:layout_constraintBottom_toBottomOf="@id/labels_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/ic_arrow_right" />
+
+    <HorizontalScrollView
+        android:id="@+id/labels_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        tools:layout_height="44dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_thumbnail"
+        app:layout_constraintEnd_toStartOf="@id/iv_more"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:scrollbars="none"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/labels"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:singleLine="true" />
+    </HorizontalScrollView>
+
+    <LinearLayout
+        android:id="@+id/ai_content_blocks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/labels_container"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <include
+            android:id="@+id/block_ai_summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/layout_content_item_block" />
+
+        <include
+            android:id="@+id/block_ai_highlights"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            layout="@layout/layout_content_item_block" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
