--- a/app/src/main/res/layout/layout_content_list_item.xml
+++ b/app/src/main/res/layout/layout_content_list_item.xml
@@ -16,7 +16,7 @@
         android:layout_height="96dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         tools:src="@drawable/pic_placeholder"/>
 
     <TextView
