feat - implement folders and tags in Collections home page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
             app:menu="@menu/top_app_bar"
-            app:title="Hello"/>
+            tools:title="Hello"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
