--- a/app/src/main/res/layout/fragment_collections.xml
+++ b/app/src/main/res/layout/fragment_collections.xml
@@ -17,24 +17,85 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="24dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_title_container"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_folders"
+            app:layout_constraintEnd_toEndOf="parent">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_content_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:paddingHorizontal="16dp"
-                android:background="@drawable/bg_container_radius_12"
-                tools:listitem="@layout/layout_folder_list_item"
-                tools:itemCount="5"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:paddingBottom="48dp">
 
+                <LinearLayout
+                    android:id="@+id/folders_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/tv_folders_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@color/color_on_surface_variant"
+                        android:fontFamily="sans-serif-medium"
+                        android:layout_marginStart="8dp"
+                        android:text="@string/smart_folders" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_folders"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="16dp"
+                        android:background="@drawable/bg_container_radius_12"
+                        android:layout_marginTop="12dp"
+                        tools:listitem="@layout/layout_collection_home_item"
+                        tools:itemCount="3"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tags_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@id/folders_container"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="16dp"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/tv_tags_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@color/color_on_surface_variant"
+                        android:fontFamily="sans-serif-medium"
+                        android:layout_marginStart="8dp"
+                        android:text="@string/tags" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_tags"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="16dp"
+                        android:background="@drawable/bg_container_radius_12"
+                        android:layout_marginTop="12dp"
+                        tools:listitem="@layout/layout_collection_home_item"
+                        tools:itemCount="30"/>
+
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
