--- a/app/src/main/res/layout/layout_collection_home_item.xml
+++ b/app/src/main/res/layout/layout_collection_home_item.xml
@@ -6,13 +6,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
-        android:id="@+id/iv_folder_icon"
+        android:id="@+id/iv_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/ic_folder"/>
+        tools:src="@drawable/ic_folder"/>
 
     <TextView
         android:id="@+id/tv_folder_name"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_folder_icon"
+        app:layout_constraintStart_toEndOf="@id/iv_icon"
         android:layout_marginStart="16dp"
         android:textSize="16sp"
         android:textColor="@color/color_on_surface"
