--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/add"
         android:enabled="true"
-        android:icon="@drawable/ic_add_2"
+        android:icon="@drawable/ic_add_collection"
         android:title="Add"
         app:showAsAction="always"/>
 </menu>
