--- a/app/src/main/res/layout/fragment_collections.xml
+++ b/app/src/main/res/layout/fragment_collections.xml
@@ -14,8 +14,7 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="24dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -46,7 +45,7 @@
                         android:id="@+id/tv_folders_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="@color/color_on_surface_variant"
                         android:fontFamily="sans-serif-medium"
                         android:layout_marginStart="8dp"
@@ -56,7 +55,7 @@
                         android:id="@+id/rv_folders"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="16dp"
+                        android:paddingHorizontal="12dp"
                         android:background="@drawable/bg_container_radius_12"
                         android:layout_marginTop="12dp"
                         tools:listitem="@layout/layout_collection_home_item"
@@ -78,7 +77,7 @@
                         android:id="@+id/tv_tags_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="@color/color_on_surface_variant"
                         android:fontFamily="sans-serif-medium"
                         android:layout_marginStart="8dp"
@@ -88,7 +87,7 @@
                         android:id="@+id/rv_tags"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="16dp"
+                        android:paddingHorizontal="12dp"
                         android:background="@drawable/bg_container_radius_12"
                         android:layout_marginTop="12dp"
                         tools:listitem="@layout/layout_collection_home_item"
