--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="color_774DF2">#774df2</color>
 
     <color name="color_surface">#F5F5F5</color>
     <color name="color_on_surface">#000000</color>
