--- a/app/src/main/res/layout/activity_assistant.xml
+++ b/app/src/main/res/layout/activity_assistant.xml
@@ -21,8 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            app:title="@string/assistant"
-            app:navigationIcon="@drawable/ic_nav_back"/>
+            app:title="@string/assistant"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
